--- a/public/views/partials/components/button-link.hbs
+++ b/public/views/partials/components/button-link.hbs
@@ -7,7 +7,7 @@
         rounded 
         min-h-fit
         h-8
-        duration-300
+        app-duration
         active:scale-110
     ">
         {{ title }}
