--- a/public/views/partials/register-form.hbs
+++ b/public/views/partials/register-form.hbs
@@ -6,7 +6,7 @@
         bg-black
         hover:shadow-2xl
         hover:shadow-red-950
-        duration-300
+        app-duration
         flex
         p-5
         items-center
