--- a/public/views/muscles/portion-detail.hbs
+++ b/public/views/muscles/portion-detail.hbs
@@ -1,7 +1,7 @@
 <div class="p-2 flex flex-col items-center">
     <div class="flex flex-col w-3/5">
         <h1>{{ capitalizeFirstLetter portion.name }}</h1>
-        {{#dropDown "muscle-group-container" "Muscle Group" "p-2 mb-1 bg-red-950 border-red-950" true}}
+        {{#dropDown "muscle-group-container" "Muscle Group" "p-2 mb-1 app-red-bg app-border" true}}
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam esse vel nihil expedita repudiandae sequi quas. Delectus officia, iusto repellendus    cupiditate id magni temporibus magnam autem accusamus deleniti, sequi soluta.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem necessitatibus aliquid eius, ad placeat sed ratione aliquam eos temporibus architecto ea fugiat,    repellat unde atque veniam nihil, culpa corporis omnis?
@@ -9,14 +9,14 @@
             </p>
 
         {{/dropDown}}
-        {{#dropDown "exercises-container" "Exercises" "p-2 mb-1 bg-red-950 border-red-950" true}}
+        {{#dropDown "exercises-container" "Exercises" "p-2 mb-1 app-red-bg app-border" true}}
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam esse vel nihil expedita repudiandae sequi quas. Delectus officia, iusto repellendus    cupiditate id magni temporibus magnam autem accusamus deleniti, sequi soluta.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem necessitatibus aliquid eius, ad placeat sed ratione aliquam eos temporibus architecto ea fugiat,    repellat unde atque veniam nihil, culpa corporis omnis?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus fuga voluptatum. Iure commodi hic fugiat quas quaerat facilis exercitationem rerum!   Modi explicabo, quasi quidem reiciendis maiores amet blanditiis libero.
             </p>
         {{/dropDown}}  
-        {{#dropDown "articulations-movements-container" "Articulations and movements" "p-2 mb-1 bg-red-950 border-red-950" true}}
+        {{#dropDown "articulations-movements-container" "Articulations and movements" "p-2 mb-1 app-red-bg app-border" true}}
             <div class="flex items-center justify-around">
             {{#each articulationsMovements}} 
                 <div class="flex flex-col p-3" data-drop-down-allow-close="true">
