--- a/public/views/partials/components/menu/li.hbs
+++ b/public/views/partials/components/menu/li.hbs
@@ -1,4 +1,4 @@
-<li class="flex {{classes}}">
+<li class="flex menu-li {{classes}}">
     <img src="/images/icons/{{icon}}.svg" alt="dumbell" class="pr-2">
     {{> components/link title=title link=link classes=linkClasses}}
 </li>
