--- a/public/views/partials/components/menu/nav-bar.hbs
+++ b/public/views/partials/components/menu/nav-bar.hbs
@@ -30,8 +30,7 @@
     <ul 
         class="
             fixed
-            -translate-x
-            opacity-0 
+            -translate-x-full-full 
             app-duration
             ease-out
             relative 
@@ -47,14 +46,14 @@
         " 
         id="list-menu"
     >
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Home' link='/home' icon='home' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Schedule' icon='schedule' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Workouts' link="/workouts" icon='dumbell' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Muscles' link='/muscles' icon='skeleton' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Exercises' link='/exercise' icon='yoga' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Personal' icon='personal' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Costumers' icon='peaple-group' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Measures' icon='balança' classes="my-3"}}
-        {{> components/menu/li linkClasses="hover:text-red-800 app-duration" title='Settings' icon='settings' classes="my-3"}}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Home' link='/home' icon='home' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Schedule' icon='schedule' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Workouts' link="/workouts" icon='dumbell' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Muscles' link='/muscles' icon='skeleton' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Exercises' link='/exercise' icon='yoga' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Personal' icon='personal' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Costumers' icon='peaple-group' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Measures' icon='balança' }}
+        {{> components/menu/li classes="app-duration app-delay -translate-x opacity-0 my-3" linkClasses="hover:text-red-800" title='Settings' icon='settings' }}
     </ul>
 </nav>
