--- a/public/views/partials/components/drop-down.hbs
+++ b/public/views/partials/components/drop-down.hbs
@@ -13,7 +13,7 @@
     <h2 data-drop-down-allow-close="true" class="text-xl text-center w-full self-center m-1">{{ title }}</h2>
     <img src="/images/icons/drop-down.svg" class="app-icon hover:scale-150 drop-down-icon ease-in app-duration" data-drop-down-allow-close="true">
   </div>
-  <div class="overflow-hidden flex flex-col ease-in app-duration ease-out h-0 -translate-y opacity-0" data-drop-down="true" data-drop-down-allow-close="true">
+  <div class="overflow-hidden flex flex-col ease-in app-duration delay-100 ease-out h-0 -translate-y opacity-0" data-drop-down="true" data-drop-down-allow-close="true">
     {{ content }}
   </div>
 </div>
