--- a/public/views/partials/components/exercises/create.hbs
+++ b/public/views/partials/components/exercises/create.hbs
@@ -12,8 +12,8 @@
     </div>
     <div class="flex flex-col p-2">
         <h1>2 - Chose the muscles, articulation and movements for the exercise</h1>
-        <div class="flex flex-col p-2">
-            <div class="flex m-1 flex-wrap">
+        <div class="flex flex items-start p-2">
+            <div class="flex flex-col items-start m-1 flex-wrap">
                 {{#each muscles}}
                     <div class="flex flex-col flex-1">
                         <div 
@@ -25,34 +25,10 @@
                         </div>
                     </div>
                 {{/each}}
-            </div>
-            <div class="flex m-1">
-                {{#each muscles}}
-                <select 
-                    name="muscle-portion" 
-                    data-portion-select="true"
-                    data-muscle-group-id="{{ this.id }}"
-                    class="
-                        text-black 
-                        w-full
-                        {{#unless (equal @index 0) }}
-                            hidden
-                        {{/unless}}
-                    "
-                >
-                    {{#each this.musclePortions}}
-                        <option value="{{this.id}}">{{this.name}}</option>
-                    {{/each}}
-                </select>
-                {{/each}}
-            </div>
+            </div>   
+            <div id="result">
             
-            <div>
-            
-            </div>
-            <div>
-            
-            </div>            
+            </div>   
         </div>
     </div>
 </form>
@@ -63,8 +39,8 @@
     const groupClick = (e) => {
         const { groupId } = e.target.dataset;
         hideAllPortions();
-        const [ selectTarget ] = [...document.querySelectorAll(`[data-muscle-group-id="${groupId}"]`)]
-        selectTarget.classList.remove('hidden');
+       // const [ selectTarget ] = [...document.querySelectorAll(`[data-muscle-group-id="${groupId}"]`)]
+       // selectTarget.classList.remove('hidden');
     }
 
     const hideAllPortions = () => {
