--- a/public/views/partials/components/icon.hbs
+++ b/public/views/partials/components/icon.hbs
@@ -1,7 +1,7 @@
 <img 
     src="/images/icons/{{icon}}.svg" 
     alt="{{alt}}" 
-    class="{{classes}} app-icon"
+    class="{{classes}}"
     id={{id}}
     data-name="{{dataName}}"
     data-value="{{value}}"
