--- a/public/views/exercises/index.hbs
+++ b/public/views/exercises/index.hbs
@@ -10,4 +10,5 @@
     </div>
 </div>
 <script src="/js/drop-down.js" type='module'></script>
+<script src="/js/exercises/muscle-group-option.js" type='module'></script>
 
