--- a/public/views/partials/components/exercises/create.hbs
+++ b/public/views/partials/components/exercises/create.hbs
@@ -1,4 +1,5 @@
 <form action="" id="create-exercise-form" class="flex flex-col text-white">
+    {{> components/form/input type="hidden" name="AMP" id="AMP" value=(json articulationMovementMuscle) }}
     <div class="flex flex-col p-2">
         <h1>1 - Chose the name and description</h1>
         <div class="w-full flex flex-1 flex-col items-start m-1">
@@ -15,23 +16,13 @@
         <div class="flex flex items-start p-2">
             <div class="flex app-border w-1/4 flex-col items-start" data-muscle-group-options-container="true">
                 {{#each muscles}}
-                    {{#if (equal this.id 1)}}
-                        {{> components/group-option
-                            iconClasses="app-duration ease-out translate-x-pq" 
-                            title=this.name
-                            uniqueId=this.id
-                            iconData=(safeStr 'data-icon-muscle-group-option="true"') 
-                            data=(safeStr 'data-muscle-group="true" data-muscle-group-option="true"') 
-                        }}
-                    {{else}}
-                        {{> components/group-option
-                            iconClasses="opacity-0 app-duration ease-out" 
-                            title=this.name
-                            uniqueId=this.id
-                            iconData=(safeStr 'data-icon-muscle-group-option="true"') 
-                            data=(safeStr 'data-muscle-group="true" data-muscle-group-option="true"') 
-                        }}
-                    {{/if}}
+                    {{> components/group-option
+                        iconClasses="opacity-0 app-duration ease-out" 
+                        title=this.name
+                        uniqueId=this.id
+                        iconData=(safeStr 'data-icon-muscle-group-option="true"') 
+                        data=(safeStr 'data-muscle-group="true" data-muscle-group-option="true"') 
+                    }}
                 {{/each}}
             </div>   
             <div class="flex app-border w-1/4 flex-col items-start" data-muscle-portions-options-container="true">
@@ -46,7 +37,7 @@
                     }}
                 {{/each}}
             </div>
-            <div class="flex app-border w-1/4 flex-col items-start" data-articulations-options-container="true">
+            <div class="flex app-border w-1/4 hidden flex-col items-start" data-articulations-options-container="true">
                 {{#each articulations}}
                     {{> components/group-option
                         iconClasses="opacity-0 app-duration ease-out" 
@@ -58,7 +49,7 @@
                     }}
                 {{/each}}
             </div>
-            <div class="flex app-border w-1/4 flex-col items-start" data-movements-options-container="true">
+            <div class="flex app-border w-1/4 hidden flex-col items-start" data-movements-options-container="true">
                 {{#each movements}}
                     {{> components/group-option
                         iconClasses="opacity-0 app-duration ease-out" 
@@ -73,4 +64,6 @@
         </div>
     </div>
 </form>
-<script src="/js/exercises/muscle-group-option.js" type="module"></script>
+<script src="/js/exercises/muscle-group-option.js" type="module">
+
+</script>
