--- a/public/views/partials/components/group-option.hbs
+++ b/public/views/partials/components/group-option.hbs
@@ -7,6 +7,7 @@
     <div class="{{ iconClasses }}"
         {{ iconData }}
         data-option-icon="true"
+        data-unique-id={{ uniqueId }}
     >
         {{> components/icon icon="arrow-r" }}
     </div>
