--- a/public/views/partials/components/group-option.hbs
+++ b/public/views/partials/components/group-option.hbs
@@ -3,6 +3,7 @@
     {{ data }}
     data-option="true"
     data-unique-id={{ uniqueId }}
+    data-selected="false"
 >
     <div class="{{ iconClasses }}"
         {{ iconData }}
