--- a/public/views/partials/components/options/container.hbs
+++ b/public/views/partials/components/options/container.hbs
@@ -1,3 +1,4 @@
 <div class="{{ classes }}" data-container-name="{{ name }}">
+    <h1 class="text-center w-full">{{ title }}</h1>
     {{ content }}
 </div>
