--- a/public/views/partials/components/options/option.hbs
+++ b/public/views/partials/components/options/option.hbs
@@ -2,13 +2,13 @@
     class="flex {{ containerClasses }}"
     {{ data }}
     data-option="true"
-    data-unique-id={{ uniqueId }}
     selected="false"
+    data-name="{{ name }}"
+    data-value="{{ value }}"
 >
     <div class="{{ iconClasses }}"
         {{ iconData }}
         data-option-icon="true"
-        data-unique-id={{ uniqueId }}
     >
         {{> components/icon icon="arrow-r" }}
     </div>
