--- a/public/views/partials/login-form.hbs
+++ b/public/views/partials/login-form.hbs
@@ -18,7 +18,7 @@
         {{> components/form/input type='password' name='password' placeholder='password' req=true classes="p-1 m-1"}}
         <div class="flex mt-4 justify-around w-full">
             {{> components/button title='login' classes="bg-black app-duration hover:scale-105"  type='submit' id="login-button"}}
-            {{> components/button title='register' classes="bg-black app-duration hover:scale-105"  id="login-to-register"}}
+            {{> components/button title='register' classes="bg-black app-duration hover:scale-105"  id="login-to-register" type="button"}}
         </div>
         <ul id="login-form-errors" class="errors-list list-disc hidden text-sm flex-col flex items-start w-full mt-1 text-red-600">
             
