--- a/public/views/partials/register-form.hbs
+++ b/public/views/partials/register-form.hbs
@@ -28,8 +28,8 @@
             </select>
         </div>
         <div class="flex mt-4 justify-around w-full">
-            {{> components/button title='register' classes="bg-black duration-75 hover:scale-105" type=true id="register-button"}}
-            {{> components/button title='login' classes="bg-black duration-75 hover:scale-105" id="register-to-login"}}    
+            {{> components/button title='register' classes="bg-black duration-75 hover:scale-105" type="submit" id="register-button"}}
+            {{> components/button title='login' classes="bg-black duration-75 hover:scale-105" id="register-to-login" type="button"}}    
         </div>
         {{> components/loading-modal id="register-spin"}}
 
