--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -1,2 +1,2 @@
-<input type="hidden" name="accessToken" id="accessToken" value="{{ accessToken }}">
-<input type="hidden" name="refreshToken" id="refreshToken" value="{{ refreshToken }}">
+{{> components/errors/user message="Error message"}}
+
