--- a/public/views/partials/components/errors/user.hbs
+++ b/public/views/partials/components/errors/user.hbs
@@ -1,6 +1,5 @@
-{{#screenModal "bg-red-900 rounded"}}
-    <div class="flex p-1">
+{{#screenModal "bg-red-900 rounded hidden"}}
+    <div class="flex h-full p-1 items-center text-center jusity-center">
         {{ message }}
     </div>
-    
 {{/screenModal}}
