--- a/public/views/partials/components/screen-modal.hbs
+++ b/public/views/partials/components/screen-modal.hbs
@@ -1,12 +1,14 @@
-<div class="fixed hidden flex bg-opacity-50 items-center justify-center inset-0 z-50 bg-black" id="screen-modal">
-    <div class="w-52 h-52 flex flex-col {{ errorModalClasses }}">
-        <img src="/images/icons/close.svg" width="10" height="10" id="close-screen-modal" class="hover:scale-105 cursor-pointer w-full w-6 h-6 self-end justify-end">
-        {{ content }}
+<div class="fixed hidden text-white flex bg-opacity-50 items-center justify-center inset-0 z-50 bg-black" id="screen-modal">
+    <div class="w-96 h-52 p-1 flex flex-col {{ errorModalClasses }}" id="screen-modal-inner-container">
+        <img src="/images/icons/close.svg" width="10" height="10" id="close-screen-modal" class="hover:scale-105 cursor-pointer w-6 h-6 self-end justify-end">
+        <div id="screen-modal-result">
+            {{ content }}
+        </div>
     </div>
 </div>
 
 <script>
-    const modal = document.getElementById('screen-modal');
-    const closeScreenModal = document.getElementById('close-screen-modal');
-    closeScreenModal.onclick = () => modal.classList.add('hidden');
+    document.getElementById('close-screen-modal').addEventListener('click', () => {
+        document.getElementById('screen-modal').classList.add('hidden')
+    })
 </script>
